# my-term

./: README.md  neko-greeting.py  pyproject.toml  setup.sh
configs/kitty/: catppuccin-mocha.conf  kitty.conf
configs/zsh/: .zshrc
src/my_term.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/my_term_tui/: __init__.py  __main__.py  app.py
src/my_term_tui/installer/: __init__.py  base.py  kitty.py  starship.py  waifu.py  zsh.py
src/my_term_tui/screens/: components.py  done.py  install.py  welcome.py
